Feat: rightBarButtonItem on navigationItem doesn't show

--- a/SoundLog/SoundLog/Presentation/Base.lproj/Main.storyboard
+++ b/SoundLog/SoundLog/Presentation/Base.lproj/Main.storyboard
@@ -131,7 +131,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fod-1u-eDs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4072.3076923076924" y="-43.364928909952603"/>
+            <point key="canvasLocation" x="-3054" y="-58"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="WE5-cv-9pD">
